FIX logo not centered

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -72,5 +72,8 @@ h6 {
 .header {
   max-width: $max_width;
   margin: auto;
-  text-align: center;
+
+  &__logo {
+    margin: auto;
+  }
 }
